--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,10 @@
                 "glob": "**/*",
                 "input": "public"
               }
+              ,
+  "src/assets"
+
+
             ],
             "styles": [
               "src/styles.css"
@@ -80,6 +84,8 @@
                 "glob": "**/*",
                 "input": "public"
               }
+               ,
+  "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -88,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
