--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "scripts": [
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+]
           },
           "configurations": {
             "production": {
@@ -89,7 +92,10 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "scripts": [
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+]
           }
         }
       }
