Home and Academics page changes

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
               "src/styles.css"
             ],
             "scripts": [
-  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+  "node_modules/jquery/dist/jquery.min.js",
+  "node_modules/turn.js/turn.min.js"
 ]
           },
           "configurations": {
@@ -94,7 +96,9 @@
               "src/styles.css"
             ],
             "scripts": [
-  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+  "node_modules/jquery/dist/jquery.min.js",
+  "node_modules/turn.js/turn.min.js"
 ]
           }
         }
