--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "bootstrap": "^5.3.8",
+    "jquery": "^4.0.0",
+    "ng2-pdf-viewer": "^10.4.0",
+    "pdfjs-dist": "^5.4.530",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "turn.js": "^1.0.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
