go to top button

--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,7 @@
             ],
             "scripts": [
   "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-  "node_modules/jquery/dist/jquery.min.js",
-  "node_modules/turn.js/turn.min.js"
+  "node_modules/jquery/dist/jquery.min.js"
 ]
           },
           "configurations": {
@@ -97,8 +96,7 @@
             ],
             "scripts": [
   "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-  "node_modules/jquery/dist/jquery.min.js",
-  "node_modules/turn.js/turn.min.js"
+   "node_modules/jquery/dist/jquery.min.js"
 ]
           }
         }
